--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Single Price Grid Component</title>
 
 </head>
 <body>
-  <section>
+  <section class="container">
     <h1>Join our community</h1>
-    <h2>30-day, hassle-free money back guarantee</h2>
+    <h2 class="guarantee">30-day, hassle-free money back guarantee</h2>
     <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
   </section>
   
-  <section>
+  <section class="container main">
     <h2>Monthly Subscription</h2>
-    <p><span>$29</span><span>per month</span></p>
+    <p><span class="cost">$29</span><span class="month"> per month</span></p>
     <p>Full access for less than $1 a day</p>
     <button>Sign Up</button>
   </section>
   
-  <footer>
+  <footer class="container">
     <h2>Why Us</h2>
     <ul>
       <li>Tutorials by industry experts</li>
