added hover state to button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>Monthly Subscription</h2>
     <p><span class="cost">$29</span><span class="month"> per month</span></p>
     <p>Full access for less than $1 a day</p>
-    <button>Sign Up</button>
+    <button class="btn">Sign Up</button>
   </section>
   
   <footer class="container">
