added media query

--- a/index.html
+++ b/index.html
@@ -11,31 +11,30 @@
 
 </head>
 <body>
-  
-  <section class="container">
-    <h1>Join our community</h1>
-    <h2 class="guarantee">30-day, hassle-free money back guarantee</h2>
-    <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
-  </section>
-  
-  <section class="container main">
-    <h2>Monthly Subscription</h2>
-    <p><span class="cost">$29</span><span class="month"> per month</span></p>
-    <p>Full access for less than $1 a day</p>
-    <button class="btn">Sign Up</button>
-  </section>
-  
-  <footer class="container">
-    <h2>Why Us</h2>
-    <ul>
-      <li>Tutorials by industry experts</li>
-      <li>Peer & expert code review</li>
-      <li>Coding exercises</li>
-      <li>Access to our GitHub repos</li>
-      <li>Community forum</li>
-      <li>Flashcard decks</li>
-      <li>New videos every week</li>
-    </ul>
-  </footer>
+    <section class="container">
+      <h1>Join our community</h1>
+      <h2 class="guarantee">30-day, hassle-free money back guarantee</h2>
+      <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+    </section>
+    <div class="second">
+    <section class="container main">
+      <h2>Monthly Subscription</h2>
+      <p><span class="cost">$29</span><span class="month"> per month</span></p>
+      <p>Full access for less than $1 a day</p>
+      <button class="btn">Sign Up</button>
+    </section>
+    <footer class="container footer">
+      <h2>Why Us</h2>
+      <ul>
+        <li>Tutorials by industry experts</li>
+        <li>Peer & expert code review</li>
+        <li>Coding exercises</li>
+        <li>Access to our GitHub repos</li>
+        <li>Community forum</li>
+        <li>Flashcard decks</li>
+        <li>New videos every week</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
